<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.manish.androidcms.widgets.WPLinearLayoutSizeBound
            app:maxWidth="@dimen/nux_width"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:baselineAligned="true"
            android:layout_gravity="center_horizontal|bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_button"
                android:src="@drawable/dashicon_info"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/help"
                android:tint="@color/blue_dark"/>
        </com.example.manish.androidcms.widgets.WPLinearLayoutSizeBound>

        <com.example.manish.androidcms.widgets.WPLinearLayoutSizeBound
            app:maxWidth="@dimen/nux_width"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.example.manish.androidcms.widgets.CMSTextView
                android:id="@+id/create_account_label"
                android:text="@string/create_account_wpcom"
                style="@style/WordPress.NUXTitle"
                app:fontVariation="light"
                app:fixWidowWords="true"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <com.example.manish.androidcms.widgets.OpenSansEditText
                    android:id="@+id/email_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/WordPress.NUXEditText"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    app:persistenceEnabled="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_email"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/relativeLayout">

                <com.example.manish.androidcms.widgets.OpenSansEditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/WordPress.NUXEditText"
                    android:inputType="textUri"
                    android:hint="@string/username"
                    app:persistenceEnabled="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_admin_users"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/relativeLayout2">

                <com.example.manish.androidcms.widgets.OpenSansEditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    style="@style/WordPress.NUXEditText"
                    android:hint="@string/password"
                    android:layout_marginRight="38dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_lock"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_visibility"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_eye_closed"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"
                    android:tint="@color/nux_eye_icon_color_closed"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="16dp">

                <com.example.manish.androidcms.widgets.OpenSansEditText
                    android:id="@+id/site_url"
                    style="@style/WordPress.NUXEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_account_blog_url"
                    android:inputType="textUri"
                    android:clickable="true"
                    android:paddingLeft="0dp"
                    android:paddingTop="12dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="12dp"
                    android:layout_toLeftOf="@+id/textView"
                    app:persistenceEnabled="true"/>

                <com.example.manish.androidcms.widgets.CMSTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".wordpress.com"
                    android:id="@+id/textView"
                    android:layout_alignParentEnd="false"
                    android:layout_marginTop="4dp"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="false"
                    android:paddingRight="8dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/grey_darken_10"
                    android:textSize="@dimen/nux_edit_field_font_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:src="@drawable/dashicon_admin_site"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:tint="@color/grey_darken_10"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nux_button_height"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <com.example.manish.androidcms.widgets.CMSTextView
                    android:id="@+id/signup_button"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:enabled="true"
                    android:gravity="center"
                    android:text="@string/nux_welcome_create_account"/>

                <RelativeLayout
                    android:id="@+id/nux_sign_in_progress_bar"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:enabled="false">

                    <ProgressBar
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

            </RelativeLayout>

            <com.example.manish.androidcms.widgets.CMSTextView
                style="@style/WordPress.NUXWhiteButtonNoBg"
                android:id="@+id/nux_sign_in_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/blue_light"
                android:gravity="center|top"/>

            <com.example.manish.androidcms.widgets.CMSTextView
                android:id="@+id/l_agree_terms_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_of_service"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                style="@style/WordPress.NUXGreyButtonNoBg"
                app:fixWidowWords="true"/>

        </com.example.manish.androidcms.widgets.WPLinearLayoutSizeBound>
    </LinearLayout>
</ScrollView>